# parlascanned

./: .coverage  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  app.py  dashboard.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: tests.yml  (+6 more)
.next/: trace  trace-build
.playwright-cli/: page-2026-03-24T13-31-48-553Z.yml  page-2026-03-24T13-36-29-798Z.yml  page-2026-03-24T13-36-30-826Z.yml  page-2026-03-24T13-37-13-853Z.yml  page-2026-03-24T20-16-42-609Z.yml  page-2026-03-24T20-16-49-191Z.yml  page-2026-03-24T20-17-09-365Z.yml  page-2026-03-24T20-17-43-213Z.yml  page-2026-03-24T20-22-41-755Z.yml  page-2026-03-24T20-23-01-878Z.yml  page-2026-03-24T20-26-53-550Z.yml  page-2026-03-26T21-39-15-697Z.yml  page-2026-03-26T21-39-26-255Z.yml  page-2026-03-26T21-43-25-644Z.yml  page-2026-03-26T21-43-45-302Z.yml  page-2026-03-26T21-44-01-938Z.yml
data/: periods.csv
frontend/: CLAUDE.md  eslint.config.mjs  jest.config.ts  next.config.ts  package-lock.json  package.json
outputs/: politician_embeddings_132.csv  politician_embeddings_161.csv  politician_embeddings_161_2d.csv  politician_embeddings_21.csv
pages/: constants.py  home.py  overview.py  party_profile.py  sidejobs.py  vote_map.py
src/: __init__.py  compute_word_stats.py  constants.py  education_clusters.py  export.py  export_json.py  fetch_data.py  fetch_protokoll_xml.py  fetch_protokolle.py  model.py  models.py  occupation_clusters.py  parse_protokolle.py  pipeline.py  storage.py  train_model.py  transforms.py
tests/: conftest.py  test_compute_word_stats.py  test_drucksachen.py  test_export_conflicts.py  test_export_json.py  test_fetch_data.py  test_fetch_protocol_xml.py  test_fetch_protocols.py  test_fetch_protokoll_xml.py  test_fetch_protokolle.py  test_keyword_timeline.py  test_models.py  test_parse_protocols.py  test_parse_protokolle.py  test_pipeline.py  test_storage.py  test_transforms.py  test_upsert.py
(+169 files in other folders)
